// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IaaS should match snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          IaaS Pipelines
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div
                aria-controls=":r2:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        IaaS Pipelines
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              aria-controls=":r2:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IaaS should match snapshot with pipelines 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          IaaS Pipelines
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div
                aria-controls=":r0:"
                aria-expanded="false"
                aria-haspopup="listbox"
                role="combobox"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="true"
          data-has-expandable-action="false"
          data-num-columns-excl-action-col="3"
          role="table"
        >
          <mock-styled.div
            role="row"
          >
            <mock-styled.div
              aria-label="Name"
              role="columnheader"
            >
              Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Build Status"
              role="columnheader"
            >
              Build Status
            </mock-styled.div>
            <mock-styled.div
              aria-label="Repository"
              role="columnheader"
            >
              Repository
            </mock-styled.div>
            <mock-styled.div
              role="columnheader"
            >
              Delete Pipeline
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default"
                  role="img"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 80 80"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M67 35.429 40 26l-27 9.429L40 45z"
                      fill="#9faebc"
                    />
                    <path
                      d="M67 35.429 40 26v19z"
                      fill="#607890"
                    />
                    <path
                      d="M52.564 12.252C51.958 5.945 46.676 1 40.272 1S28.586 5.945 27.979 12.252c-4.1.588-7.263 4.156-7.263 8.455 0 4.709 3.796 8.54 8.461 8.54h22.19c4.665 0 8.46-3.831 8.46-8.54 0-4.3-3.163-7.867-7.263-8.455"
                      fill="#7e9bfa"
                    />
                    <path
                      d="M32.694 19.776a.36.36 0 0 0 .335.228h3.973v9.243h6.525v-9.243h3.987c.146 0 .278-.09.335-.228a.38.38 0 0 0-.078-.403l-7.232-7.4a.36.36 0 0 0-.513 0l-7.253 7.4a.38.38 0 0 0-.079.403M43.53 29.247h-6.518c.015 1.8 1.471 3.26 3.26 3.26s3.244-1.46 3.259-3.26"
                      fill="#fff"
                    />
                    <path
                      d="M40.272 34.414c-2.775 0-5.04-2.306-5.111-5.167h-7.927q.07.67.2 1.329c.105.535.558.92 1.085.92h2.002q.088.232.184.46l-1.416 1.47a1.18 1.18 0 0 0-.14 1.446 15 15 0 0 0 1.84 2.335 14.6 14.6 0 0 0 2.25 1.91c.439.3 1.022.24 1.394-.147l1.416-1.47q.22.102.444.192v2.078c0 .546.37 1.017.886 1.126a14 14 0 0 0 5.785 0c.516-.11.887-.58.887-1.126v-2.078q.224-.09.443-.191l1.416 1.47c.372.385.955.446 1.394.145a14.6 14.6 0 0 0 2.251-1.909c.688-.713 1.306-1.5 1.84-2.335.29-.456.231-1.06-.14-1.447l-1.417-1.47q.097-.227.184-.46h2.002c.527 0 .98-.384 1.085-.92q.13-.658.2-1.328h-7.926c-.072 2.861-2.337 5.166-5.111 5.166"
                      fill="#fff"
                    />
                    <path
                      d="M40 44.566 13 36v33.401L40 78z"
                      fill="#607890"
                    />
                    <path
                      d="M67 69.401V35l-27 9.566V78z"
                      fill="#506478"
                    />
                    <path
                      d="M13.258 35 4 46.03 31.246 56 40 44.475z"
                      fill="#d8dee4"
                    />
                    <path
                      d="M66.74 35 76 46.03 48.757 56 40 44.475z"
                      fill="#798da1"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  reapit-ltd-internal-thoughtless-cub
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Build Status"
                >
                  <mock-styled.span
                    classname="el-intent-pending"
                  />
                  Pre Provisioned
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Repository"
                />
              </mock-styled.div>
              <mock-styled.div
                role="cell"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 18 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.625 16.875a.625.625 0 1 1-1.25 0V8.75a.625.625 0 0 1 1.25 0zM12.125 17.5c.345 0 .625-.28.625-.625V8.75a.625.625 0 1 0-1.25 0v8.125c0 .345.28.625.625.625M6.5 16.875a.625.625 0 1 1-1.25 0V8.75a.625.625 0 0 1 1.25 0z"
                        fill="currentColor"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M12.125 2.5h3.438c.861 0 1.562.7 1.562 1.563V6.25c0 .345-.28.625-.625.625h-.342l-.54 11.34A1.873 1.873 0 0 1 13.747 20H4.254a1.873 1.873 0 0 1-1.872-1.786l-.54-11.339H1.5a.625.625 0 0 1-.625-.625V4.063c0-.862.7-1.563 1.563-1.563h3.437v-.625C5.875.841 6.716 0 7.75 0h2.5c1.034 0 1.875.841 1.875 1.875zM7.75 1.25a.626.626 0 0 0-.625.625V2.5h3.75v-.625a.626.626 0 0 0-.625-.625zm-5.312 2.5a.313.313 0 0 0-.313.313v1.562h13.75V4.063a.313.313 0 0 0-.312-.313zm11.308 15a.624.624 0 0 0 .624-.595l.537-11.28H3.093l.537 11.28c.016.333.29.595.624.595z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            aria-label="Previous"
            data-testid="back-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            6
          </mock-styled.div>
          <mock-styled.button
            aria-label="Next"
            data-testid="forward-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-pagination-primary el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        IaaS Pipelines
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              aria-controls=":r0:"
              aria-expanded="false"
              aria-haspopup="listbox"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname="el-mb11"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="3"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Name"
            role="columnheader"
          >
            Name
          </mock-styled.div>
          <mock-styled.div
            aria-label="Build Status"
            role="columnheader"
          >
            Build Status
          </mock-styled.div>
          <mock-styled.div
            aria-label="Repository"
            role="columnheader"
          >
            Repository
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            Delete Pipeline
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 80 80"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M67 35.429 40 26l-27 9.429L40 45z"
                    fill="#9faebc"
                  />
                  <path
                    d="M67 35.429 40 26v19z"
                    fill="#607890"
                  />
                  <path
                    d="M52.564 12.252C51.958 5.945 46.676 1 40.272 1S28.586 5.945 27.979 12.252c-4.1.588-7.263 4.156-7.263 8.455 0 4.709 3.796 8.54 8.461 8.54h22.19c4.665 0 8.46-3.831 8.46-8.54 0-4.3-3.163-7.867-7.263-8.455"
                    fill="#7e9bfa"
                  />
                  <path
                    d="M32.694 19.776a.36.36 0 0 0 .335.228h3.973v9.243h6.525v-9.243h3.987c.146 0 .278-.09.335-.228a.38.38 0 0 0-.078-.403l-7.232-7.4a.36.36 0 0 0-.513 0l-7.253 7.4a.38.38 0 0 0-.079.403M43.53 29.247h-6.518c.015 1.8 1.471 3.26 3.26 3.26s3.244-1.46 3.259-3.26"
                    fill="#fff"
                  />
                  <path
                    d="M40.272 34.414c-2.775 0-5.04-2.306-5.111-5.167h-7.927q.07.67.2 1.329c.105.535.558.92 1.085.92h2.002q.088.232.184.46l-1.416 1.47a1.18 1.18 0 0 0-.14 1.446 15 15 0 0 0 1.84 2.335 14.6 14.6 0 0 0 2.25 1.91c.439.3 1.022.24 1.394-.147l1.416-1.47q.22.102.444.192v2.078c0 .546.37 1.017.886 1.126a14 14 0 0 0 5.785 0c.516-.11.887-.58.887-1.126v-2.078q.224-.09.443-.191l1.416 1.47c.372.385.955.446 1.394.145a14.6 14.6 0 0 0 2.251-1.909c.688-.713 1.306-1.5 1.84-2.335.29-.456.231-1.06-.14-1.447l-1.417-1.47q.097-.227.184-.46h2.002c.527 0 .98-.384 1.085-.92q.13-.658.2-1.328h-7.926c-.072 2.861-2.337 5.166-5.111 5.166"
                    fill="#fff"
                  />
                  <path
                    d="M40 44.566 13 36v33.401L40 78z"
                    fill="#607890"
                  />
                  <path
                    d="M67 69.401V35l-27 9.566V78z"
                    fill="#506478"
                  />
                  <path
                    d="M13.258 35 4 46.03 31.246 56 40 44.475z"
                    fill="#d8dee4"
                  />
                  <path
                    d="M66.74 35 76 46.03 48.757 56 40 44.475z"
                    fill="#798da1"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Name"
              >
                reapit-ltd-internal-thoughtless-cub
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Build Status"
              >
                <mock-styled.span
                  classname="el-intent-pending"
                />
                Pre Provisioned
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Repository"
              />
            </mock-styled.div>
            <mock-styled.div
              role="cell"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 18 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.625 16.875a.625.625 0 1 1-1.25 0V8.75a.625.625 0 0 1 1.25 0zM12.125 17.5c.345 0 .625-.28.625-.625V8.75a.625.625 0 1 0-1.25 0v8.125c0 .345.28.625.625.625M6.5 16.875a.625.625 0 1 1-1.25 0V8.75a.625.625 0 0 1 1.25 0z"
                      fill="currentColor"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12.125 2.5h3.438c.861 0 1.562.7 1.562 1.563V6.25c0 .345-.28.625-.625.625h-.342l-.54 11.34A1.873 1.873 0 0 1 13.747 20H4.254a1.873 1.873 0 0 1-1.872-1.786l-.54-11.339H1.5a.625.625 0 0 1-.625-.625V4.063c0-.862.7-1.563 1.563-1.563h3.437v-.625C5.875.841 6.716 0 7.75 0h2.5c1.034 0 1.875.841 1.875 1.875zM7.75 1.25a.626.626 0 0 0-.625.625V2.5h3.75v-.625a.626.626 0 0 0-.625-.625zm-5.312 2.5a.313.313 0 0 0-.313.313v1.562h13.75V4.063a.313.313 0 0 0-.312-.313zm11.308 15a.624.624 0 0 0 .624-.595l.537-11.28H3.093l.537 11.28c.016.333.29.595.624.595z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          aria-label="Previous"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          6
        </mock-styled.div>
        <mock-styled.button
          aria-label="Next"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-pagination-primary el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
